// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get() should parse JSON with comments 1`] = `
Object {
  "// bar": Array [
    Array [
      "/* Foo */",
    ],
  ],
  "bar": 42,
}
`;

exports[`save() should create file 1`] = `
Object {
  "/": null,
  "/test.json": "{
  \\"foo\\": 1
}",
}
`;

exports[`save() should keep indentation 1`] = `
"{
	\\"bar\\": 42,
	\\"baz\\": {
		\\"foo\\": 43
	},
	\\"foo\\": 1
}"
`;

exports[`save() should save JSON with comments 1`] = `
"{
  // Bar comment
  \\"bar\\": 42
}"
`;

exports[`save() should update file 1`] = `
Object {
  "/": null,
  "/test.json": "{
  \\"bar\\": 42,
  \\"baz\\": {
    \\"foo\\": 43
  },
  \\"foo\\": 1
}",
}
`;
